--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.6",
     "multer": "^1.4.4",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   }
 }
