--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "passport": "^0.5.2",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0"
   }
